MBP-707 - Fix biocode ivy configuration -Refactor out common code from build scripts into shared.xml